[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Default-Big.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/Default-Medium.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/game/ui/options/OptionsMenu.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.278431, 0.294118, 0.427451 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.490196, 0.419608, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 2

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0, 0.298039, 0.639216, 0.25098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 24.0
margin_right = -12.0
margin_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 124.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="ResumeButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 124.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Restart Level"

[node name="Options" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 124.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Options"

[node name="Back to Menu" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 124.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Back to Menu"

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Options" to="OptionsMenu" method="show"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Back to Menu" to="." method="_on_Back_to_Menu_pressed"]
